# wikillm

./: LICENSE  README.md  app.py  llm.py  pyproject.toml
react-chatgpt/: README.md  package-lock.json  package.json  server.js
react-chatgpt/public/: index.html
react-chatgpt/src/: App.js  index.css
