[tool.poetry]
name = "wikillm"
version = "0.1.0"
description = ""
authors = ["Lara Mohan", "Rohan Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
openai = "^1.11.0"
transformers = "^4.37.2"
easyedit = "^0.0.1.dev0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
