[tool.poetry]
name = "wikillm"
version = "0.1.0"
description = ""
authors = ["Lara Mohan", "Rohan Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
transformers = "^4.37.2"
easyedit = "^0.0.1.dev0"
openai = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
